@@ -3,7 +3,7 @@ dnl Process this file with autoconf to produce a configure script.
 # $Id$
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(etherape, 0.3.1)
+AM_INIT_AUTOMAKE(etherape, 0.3.2)
 AM_CONFIG_HEADER(config.h)
 
 dnl Pick up the Gnome macros.
