@@ -205,4 +205,8 @@ what happens when you are rushed by deadlines! :-) )
   
 </ul><h3>Overview of Etherape 0.0.1 (Friday 02-18-2000):</h3><ul>
 <li> Initial version. Don't even expect it to run.
+</ul>
+<p><A href="http://sourceforge.net"> 
+<IMG src="http://sourceforge.net/sflogo.php?group_id=2712&amp;type=1"
+width="88" height="31" border="0"></A> 
 </BODY></HTML>
